<?xml version="1.0" encoding="utf-8"?>

<resources>
	<string name="app_name">onebeartoe-pixel-android</string>
    
    <string name="bluetooth_pair">Blueooth Pairing</string>
    <string name="bluetooth_pairSummary">Shortcut to the Bluetooth settings screen. Pair to IOIO using code: 4545</string>
    	
    <string name="firstTime_instructions">After this completes, select Instructions from the menu to use your own images</string>
    
    <string name="hello">Hello World, PixelActivity!</string>
    
    <string name="loadingImagesPlsWait">Loading images, just a moment&#8230;</string>
    
    <string name="prefTitle">PIXEL Art Settings</string>    
    <string name="prefSummary">PIXEL Art Settings</string>    
    
    <string name="rescan_screen_verbage">Now scanning your SD card or internal memory for new images or deletions, just a moment&#8230;</string>
    
    <string name="startup_verbage_1">One Time Setup</string>
    <string name="startup_verbage_2">Copying stock images to your SD card or internal memory&#8230;</string>
    <string name="setupInstructionsString">Pair your Android device to PIXEL which will show up as \'IOIO\' in Bluetooth using code 4545.\n\nTap an image to display it on PIXEL.\n\nSwipe from left to right to start a Slide Show and swipe from right to left to stop the Slide Show.\n\nNote the last image will remain displayed on PIXEL even after your Android device is switched off.\n\nFollow the instructions below to add your own images to this app:\n\nConnect your Android device to your computer with a USB cable.\n\nFrom your computer, open your Android device and copy your images to the pixel/pixelart folder of your SD card or internal storage if your device does not have a removeable SD card.\n\nAfter done copying, select Rescan from this app\'s menu\n\nYou can also delete the sample images leaving only your images.\n\nYou\&apos;ll get the best results by pre-scaling your images to 32x32 resolution.\n\nAny image not in 32x32 resolution will be scaled automatically to 32x32.</string>
    <string name="setupInstructionsStringTitle">Instructions</string>    
    <string name="slideShowStartInstructions">Tap to display a single image or Swipe from left to right to start a Slide Show</string>

    <string name="noSleep">Disable Power Savings</string>    
    <string name="pref_noSleepDefault">false</string>
    <string name="noSleepSummary">Forces the app to be always on, your device will not go into power savings mode while this app is running. Good if using as a Kiosk for example. </string>
    <string name="selected_matrix">selected_matrix</string>
    <string name="matrix">LED Panel Selection</string>
    <string name="matrixSummary">Select your LED Panel Model</string>
    <string name="dialogTitleMatrix">LED Panel Selection</string>
    <string name="matrix_default_value">3</string>
    <string name="debugMode">Debug Mode</string>
    <string name="pref_debugModeDefault">false</string>
    <string name="debugModeSummary">Displays debug messages, use to see how often the Bluetooth connections are getting disconnected and connected as well as other debug messages</string>
    <string name="slideShowtitle">Slide Show Settings</string>
    <string name="slideShowtitleSummary">Slide Show Settings</string>
    <string name="imageDisplayDuration">Image Display Duration</string>    
    <string name="pref_imageDisplayDuration">pref_imageDisplayDuration</string>
    <string name="imageDisplayDurationDefault">5</string>
    <string name="imageDisplayDurationSummary">Number of seconds each image is displayed</string>
    <string name="pauseBetweenImagesDuration">Pause Between Images</string>        
    <string name="pauseBetweenImagesDurationDefault">3</string>
    <string name="pauseBetweenImagesDurationSummary">Number of seconds to pause in between images</string>
    <string name="pref_pauseBetweenImagesDuration">pref_pauseBetweenImagesDuration</string>
    <string name="menu_prefs_title">Settings</string>
    <string name="menu_about_title">About</string>
    <string name="menu_instructions_title">Instructions</string>
    <string name="menu_rescan_title">Rescan</string>
    <string name="menu_about_summary">http://ledpixelart.com\n\nDesigned by Open Gadgets LLC</string>
    <string name="versionString">Version</string>
    <string name="notFoundString">PIXEL Not Found</string>
    <string name="bluetoothPairingString">Please ensure Bluetooth pairing has been completed prior. The Bluetooth pairing code is: 4545."</string>
    <string name="OKText">OK</string>
    <string name="stopSlideShowMessage">You\'re still in slide show mode, swipe from right to left to end the slide show and then you can select a single image</string>
    <string name="loadingImagesPlsWaitTitle">Please Wait</string>
    <string name="slideShowStartVerbage">Starting Slide Show&#8230;</string>
    <string name="slideShowStopInstructions">Swipe from right to left to stop the Slide Show</string>
    <string name="slideShowStopVerbage">Slide Show Stopped</string>
    
    <string name="BootloaderVersionString">Bootloader Version</string> 
    <string name="FirmwareVersionString">Firmware Version</string> 
    <string name="LibraryVersionString">Library Version</string> 
    <string name="HardwareVersionString">Hardware Version</string>
    
    <string name="fps_override">fps_override</string>
    <string name="FPSOverrideDefault">0</string>
    <string name="FPSOverrideTitle">Frames per Second</string>
    <string name="FPSOverrideSummary">Normally you won\'t need to change this, only if you want to override the frames per second of the animations. Restart app after changing.</string>
    <string name="dialogTitleFPSOverride">Frames per Second</string>
    
    <string name="settings_bg_color_confirm">Saves battery life by dimming screen during the Slide Show</string>
    <string name="settings_default_color_confirm">Saves battery life by dimming screen during the Slide Show</string>
    <string name="settings_bg_color_dialog">Saves battery life by dimming screen during the Slide Show</string>
    
    <!-- scrolling text -->
    <string name="defaultText">Type Text Here</string>
    <string name="seekbar_label">Scrolling Speed:</string>
    <string name="fontSpinner_title">Select Font</string>
    <string name="textbox_label">Enter Scrolling Text:</string>
    
    
</resources>
