<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        
          <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="5px"
        android:text="@string/textbox_label" />
    
    
    <EditText
        android:id="@+id/textField"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/defaultText" />

	<TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/seekbar_label"
	    />
	
	<SeekBar
		android:id="@+id/SeekBar"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:max="10"
		android:progress="1"
		/>
	
	<TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="Font Size:"
	    />
	
	<SeekBar
		android:id="@+id/FontSeekBar"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:max="50"
		android:progress="26"
		/>
 
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2" >
 

        
    </LinearLayout>

    <com.larswerkman.colorpicker.ColorPicker
        android:id="@+id/picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/svbar"
        android:layout_below="@+id/fontSpinner"
        android:layout_marginTop="55dp"
        android:layout_weight="1"
        android:text="Change Color" />

    <Spinner
        android:id="@+id/fontSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_weight="1"
        android:prompt="@string/fontSpinner_title" />

    <com.larswerkman.colorpicker.OpacityBar
        android:id="@+id/opacitybar"
        android:layout_width="322dp"
        android:layout_height="112dp"
        android:layout_centerVertical="true"
        android:layout_margin="8dip"
        android:layout_marginLeft="17dp"
        android:layout_toRightOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/fontSpinner"
        android:layout_alignLeft="@+id/opacitybar"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="20dp"
        android:layout_weight="1"
        android:text="Text Color"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <com.larswerkman.colorpicker.SVBar
        android:id="@+id/svbar"
        android:layout_width="322dp"
        android:layout_height="112dp"
        android:layout_above="@+id/opacitybar"
        android:layout_margin="8dip"
        android:layout_toRightOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/opacitybar"
        android:layout_alignParentRight="true"
        android:layout_marginRight="47dp"
        android:layout_weight="1"
        android:text="Font:"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>

  