<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.larswerkman.demo.colorpicker"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
    
    <EditText
        android:id="@+id/textField"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/defaultText" />

	<TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/seekbar_label"
	    />
	
	<SeekBar
		android:id="@+id/SeekBar"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:max="10"
		android:progress="1"
		/>
	
	<TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="Font Size:"
	    />
	
	<SeekBar
		android:id="@+id/FontSeekBar"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:max="50"
		android:progress="26"
		/>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:paddingTop="1px">

		<TextView
		    android:id="@+id/textView3"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:text="Font:"
		    android:textAppearance="?android:attr/textAppearanceSmall" />

		
		
		<Spinner
	    android:id="@+id/fontSpinner"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
	    android:prompt="@string/fontSpinner_title" />

	</LinearLayout>

	
	
	  <com.larswerkman.colorpicker.ColorPicker
        android:id="@+id/picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>
 
    <com.larswerkman.colorpicker.SVBar
        android:id="@+id/svbar"
        android:layout_width="322dp"
        android:layout_height="112dp"
        android:layout_gravity="center"
        android:layout_margin="8dip"/>
 
    <com.larswerkman.colorpicker.OpacityBar
        android:id="@+id/opacitybar"
        android:layout_width="322dp"
        android:layout_height="112dp"
        android:layout_gravity="center"
        android:layout_margin="8dip"/>
 
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2" >
 
        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Change Color"
            android:layout_weight="1" />
 
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Text Color"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_weight="1" />
 
    </LinearLayout>


	
</LinearLayout>
